<package>
  <name>libnabo</name>
  <version>0.1.1</version>
  <description>
      A library for K nearest neighbour
  </description>
  <maintainer email="cedric.pradalier@georgiatech-metz.fr">Cedric Pradalier</maintainer>
  <license>BSD</license>

  <author email="cedric.pradalier@georgiatech-metz.fr">Cedric Pradalier</author>

  <buildtool_depend>catkin</buildtool_depend>


</package>

